Add notification mask support